--- a/adventure-yaarana/angular.json
+++ b/adventure-yaarana/angular.json
@@ -22,6 +22,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "css",
             "assets": [
+               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
