--- a/adventure-yaarana/netlify.toml
+++ b/adventure-yaarana/netlify.toml
@@ -1,3 +1,6 @@
 [build]
   command = "npx ng build --configuration production"
-  publish = "dist/adventure-yaarana"
+  publish = "dist/adventure-yaarana/browser"
+
+[context.production.environment]
+  NODE_VERSION = "22.11.0"
